CREATE EXTENSION IF NOT EXISTS pgcrypto;

CREATE TABLE IF NOT EXISTS flags (
    id UUID PRIMARY KEY DEFAULT gen_random_uuid(),
    name VARCHAR(255) NOT NULL,
    iso_code VARCHAR(3) NOT NULL,
    imo_flag_code VARCHAR(10) NOT NULL
);

ALTER TABLE flags
ADD CONSTRAINT flags_iso_code_key UNIQUE (iso_code);

INSERT INTO flags (name, iso_code, imo_flag_code) VALUES
    ('Albania', 'ALB', '201'),
    ('Andorra', 'AND', '202'),
    ('Austria', 'AUT', '203'),
    ('Belgium', 'BEL', '205'),
    ('Belarus', 'BLR', '206'),
    ('Bulgaria', 'BGR', '207'),
    ('Vatican City State', 'VAT', '208'),
    ('Cyprus', 'CYP', '209'),
    ('Germany', 'DEU', '211'),
    ('Georgia', 'GEO', '213'),
    ('Moldova', 'MDA', '214'),
    ('Malta', 'MLT', '215'),
    ('Armenia', 'ARM', '216'),
    ('Denmark', 'DNK', '219'),
    ('Spain', 'ESP', '224'),
    ('France', 'FRA', '226'),
    ('Finland', 'FIN', '230'),
    ('Faroe Islands', 'FRO', '231'),
    ('United Kingdom', 'GBR', '232'),
    ('Gibraltar', 'GIB', '236'),
    ('Greece', 'GRC', '237'),
    ('Croatia', 'HRV', '238'),
    ('Morocco', 'MAR', '242'),
    ('Hungary', 'HUN', '243'),
    ('Netherlands', 'NLD', '244'),
    ('Italy', 'ITA', '247'),
    ('Ireland', 'IRL', '250'),
    ('Iceland', 'ISL', '251'),
    ('Liechtenstein', 'LIE', '252'),
    ('Luxembourg', 'LUX', '253'),
    ('Monaco', 'MCO', '254'),
    ('Norway', 'NOR', '257'),
    ('Poland', 'POL', '261'),
    ('Montenegro', 'MNE', '262'),
    ('Portugal', 'PRT', '263'),
    ('Romania', 'ROU', '264'),
    ('Sweden', 'SWE', '265'),
    ('Slovak Republic', 'SVK', '267'),
    ('San Marino', 'SMR', '268'),
    ('Switzerland', 'CHE', '269'),
    ('Czech Republic', 'CZE', '270'),
    ('Turkey', 'TUR', '271'),
    ('Ukraine', 'UKR', '272'),
    ('Russia', 'RUS', '273'),
    ('Macedonia', 'MKD', '274'),
    ('Latvia', 'LVA', '275'),
    ('Estonia', 'EST', '276'),
    ('Lithuania', 'LTU', '277'),
    ('Slovenia', 'SVN', '278'),
    ('Serbia', 'SRB', '279'),
    ('Anguilla', 'AIA', '301'),
    ('Antigua and Barbuda', 'ATG', '304'),
    ('Netherlands Antilles', 'CUW', '306'),
    ('Aruba', 'ABW', '307'),
    ('Bahamas', 'BHS', '308'),
    ('Bermuda', 'BMU', '310'),
    ('Belize', 'BLZ', '312'),
    ('Barbados', 'BRB', '314'),
    ('Canada', 'CAN', '316'),
    ('Cayman Islands', 'CYM', '319'),
    ('Costa Rica', 'CRI', '321'),
    ('Cuba', 'CUB', '323'),
    ('Dominica', 'DMA', '325'),
    ('Dominican Republic', 'DOM', '327'),
    ('Guadeloupe', 'GLP', '329'),
    ('Grenada', 'GRD', '330'),
    ('Greenland', 'GRL', '331'),
    ('Guatemala', 'GTM', '332'),
    ('Honduras', 'HND', '335'),
    ('Haiti', 'HTI', '336'),
    ('United States of America', 'USA', '338'),
    ('Jamaica', 'JAM', '339'),
    ('Saint Kitts and Nevis', 'KNA', '341'),
    ('Saint Lucia', 'LCA', '343'),
    ('Mexico', 'MEX', '345'),
    ('Martinique', 'MTQ', '347'),
    ('Montserrat', 'MSR', '348'),
    ('Nicaragua', 'NIC', '350'),
    ('Panama', 'PAN', '351'),
    ('Puerto Rico', 'PRI', '358'),
    ('El Salvador', 'SLV', '359'),
    ('Saint Pierre and Miquelon', 'SPM', '361'),
    ('Trinidad and Tobago', 'TTO', '362'),
    ('Turks and Caicos Islands', 'TCA', '364'),
    ('Saint Vincent and the Grenadines', 'VCT', '375'),
    ('British Virgin Islands', 'VGB', '378'),
    ('United States Virgin Islands', 'VIR', '379'),
    ('Afghanistan', 'AFG', '401'),
    ('Saudi Arabia', 'SAU', '403'),
    ('Bangladesh', 'BGD', '405'),
    ('Bahrain', 'BHR', '408'),
    ('Bhutan', 'BTN', '410'),
    ('China', 'CHN', '412'),
    ('Taiwan', 'TWN', '416'),
    ('Sri Lanka', 'LKA', '417'),
    ('India', 'IND', '419'),
    ('Iran', 'IRN', '422'),
    ('Azerbaijan', 'AZE', '423'),
    ('Iraq', 'IRQ', '425'),
    ('Israel', 'ISR', '428'),
    ('Japan', 'JPN', '431'),
    ('Turkmenistan', 'TKM', '434'),
    ('Kazakhstan', 'KAZ', '436'),
    ('Uzbekistan', 'UZB', '437'),
    ('Jordan', 'JOR', '438'),
    ('Korea', 'KOR', '440'),
    ('State of Palestine', 'PSE', '443'),
    ('Democratic People''s Republic of Korea', 'PRK', '445'),
    ('Kuwait', 'KWT', '447'),
    ('Lebanon', 'LBN', '450'),
    ('Kyrgyz Republic', 'KGZ', '451'),
    ('Macao', 'MAC', '453'),
    ('Maldives', 'MDV', '455'),
    ('Mongolia', 'MNG', '457'),
    ('Nepal', 'NPL', '459'),
    ('Oman', 'OMN', '461'),
    ('Pakistan', 'PAK', '463'),
    ('Qatar', 'QAT', '466'),
    ('Syrian Arab Republic', 'SYR', '468'),
    ('United Arab Emirates', 'ARE', '470'),
    ('Tajikistan', 'TJK', '472'),
    ('Yemen', 'YEM', '473'),
    ('Hong Kong', 'HKG', '477'),
    ('Bosnia and Herzegovina', 'BIH', '478'),
    ('Australia', 'AUS', '503'),
    ('Myanmar', 'MMR', '506'),
    ('Brunei Darussalam', 'BRN', '508'),
    ('Micronesia', 'FSM', '510'),
    ('Palau', 'PLW', '511'),
    ('New Zealand', 'NZL', '512'),
    ('Cambodia', 'KHM', '514'),
    ('Christmas Island', 'CXR', '516'),
    ('Cook Islands', 'COK', '518'),
    ('Fiji', 'FJI', '520'),
    ('Cocos (Keeling) Islands', 'CCK', '523'),
    ('Indonesia', 'IDN', '525'),
    ('Kiribati', 'KIR', '529'),
    ('Lao People''s Democratic Republic', 'LAO', '531'),
    ('Malaysia', 'MYS', '533'),
    ('Northern Mariana Islands', 'MNP', '536'),
    ('Marshall Islands', 'MHL', '538'),
    ('New Caledonia', 'NCL', '540'),
    ('Niue', 'NIU', '542'),
    ('Nauru', 'NRU', '544'),
    ('French Polynesia', 'PYF', '546'),
    ('Philippines', 'PHL', '548'),
    ('Papua New Guinea', 'PNG', '553'),
    ('Pitcairn Island', 'PCN', '555'),
    ('Solomon Islands', 'SLB', '557'),
    ('American Samoa', 'ASM', '559'),
    ('Samoa', 'WSM', '561'),
    ('Singapore', 'SGP', '563'),
    ('Thailand', 'THA', '567'),
    ('Tonga', 'TON', '570'),
    ('Tuvalu', 'TUV', '572'),
    ('Viet Nam', 'VNM', '574'),
    ('Vanuatu', 'VUT', '576'),
    ('Wallis and Futuna Islands', 'WLF', '578'),
    ('South Africa', 'ZAF', '601'),
    ('Angola', 'AGO', '603'),
    ('Algeria', 'DZA', '605'),
    ('Burundi', 'BDI', '609'),
    ('Benin', 'BEN', '610'),
    ('Botswana', 'BWA', '611'),
    ('Cameroon', 'CMR', '613'),
    ('Congo', 'COG', '615'),
    ('Comoros', 'COM', '616'),
    ('Cabo Verde', 'CPV', '617'),
    ('Ivory Coast', 'CIV', '619'),
    ('Djibouti', 'DJI', '621'),
    ('Egypt', 'EGY', '622'),
    ('Ethiopia', 'ETH', '624'),
    ('Eritrea', 'ERI', '625'),
    ('Gabonese Republic', 'GAB', '626'),
    ('Ghana', 'GHA', '627'),
    ('Gambia', 'GMB', '629'),
    ('Guinea-Bissau', 'GNB', '630'),
    ('Equatorial Guinea', 'GNQ', '631'),
    ('Guinea', 'GIN', '632'),
    ('Burkina Faso', 'BFA', '633'),
    ('Kenya', 'KEN', '634'),
    ('Liberia', 'LBR', '636'),
    ('South Sudan', 'SSD', '638'),
    ('Libya', 'LBY', '642'),
    ('Lesotho', 'LSO', '644'),
    ('Mauritius', 'MUS', '645'),
    ('Madagascar', 'MDG', '647'),
    ('Mali', 'MLI', '649'),
    ('Mozambique', 'MOZ', '650'),
    ('Mauritania', 'MRT', '654'),
    ('Malawi', 'MWI', '655'),
    ('Nigeria', 'NGA', '656'),
    ('Namibia', 'NAM', '659'),
    ('Reunion', 'REU', '660'),
    ('Rwanda', 'RWA', '661'),
    ('Sudan', 'SDN', '662'),
    ('Senegal', 'SEN', '663'),
    ('Seychelles', 'SYC', '664'),
    ('Saint Helena', 'SHN', '665'),
    ('Somali Democratic Republic', 'SOM', '666'),
    ('Sierra Leone', 'SLE', '667'),
    ('Sao Tome and Principe', 'STP', '668'),
    ('Swaziland', 'SWZ', '669'),
    ('Chad', 'TCD', '670'),
    ('Togolese Republic', 'TGO', '671'),
    ('Tunisian Republic', 'TUN', '672'),
    ('Tanzania', 'TZA', '674'),
    ('Uganda', 'UGA', '675'),
    ('Democratic Republic of the Congo', 'COD', '676'),
    ('Zambia', 'ZMB', '678'),
    ('Zimbabwe', 'ZWE', '679'),
    ('Argentine Republic', 'ARG', '701'),
    ('Brazil', 'BRA', '710'),
    ('Bolivia', 'BOL', '720'),
    ('Chile', 'CHL', '725'),
    ('Colombia', 'COL', '730'),
    ('Ecuador', 'ECU', '735'),
    ('Falkland Islands', 'FLK', '740'),
    ('Guiana', 'GUF', '745'),
    ('Guyana', 'GUY', '750'),
    ('Paraguay', 'PRY', '755'),
    ('Peru', 'PER', '760'),
    ('Suriname', 'SUR', '765'),
    ('Uruguay', 'URY', '770'),
    ('Venezuela', 'VEN', '775')
ON CONFLICT (iso_code) DO NOTHING;